fix: fixed hand scrollbar not showing

--- a/src/components/Hand/CardList.css
+++ b/src/components/Hand/CardList.css
@@ -1,32 +1,32 @@
 #card-list {
-  display: grid;
-  grid-auto-flow: column;
-  grid-auto-columns: max-content;
-  align-items: center;
-  font-size: 0.9em;
+	display: grid;
+	grid-auto-flow: column;
+	grid-auto-columns: max-content;
+	align-items: center;
+	font-size: 0.9em;
 
-  width: 100%;
-  height: 22em;
+	width: 100%;
+	height: 16em;
 
-  padding: 0;
-  padding-left: 12em;
-  overflow: auto;
+	padding: 0;
+	padding-left: 12em;
+	overflow: auto;
 }
 
 #card-list > .card:hover {
-  margin-left: -1.5em;
-  margin-right: 1.5em;
+	margin-left: -1.5em;
+	margin-right: 1.5em;
 
-  transform: translateY(-0.25em);
-  z-index: 1;
+	transform: translateY(-0.25em);
+	z-index: 1;
 }
 
 #card-list > .card:not(:hover) {
-  margin-left: -1.5em;
-  z-index: 1;
+	margin-left: -1.5em;
+	z-index: 1;
 }
 
 #card-list > .card.selected {
-  transform: translateY(-0.5em);
-  margin-right: 1.5em;
+	transform: translateY(-0.5em);
+	margin-right: 1.5em;
 }
